--- a/c2hire/terms-conditions.html
+++ b/c2hire/terms-conditions.html
@@ -16,54 +16,55 @@
 
 <body>
     <nav class="navbar navbar-expand-sm">
-        <a class="navbar-brand" href="#">C2Hire.</a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="home-page.html">Home</a>
-            </li>
-            <li class="nav-item">
-                <div class="dropdown">
-                    <a class="nav-link" data-toggle="dropdown">About Us</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Why C2Hire</a>
-                        <a class="dropdown-item" href="#">Our Team</a>
-                        <a class="dropdown-item" href="#">Advisors</a>
-                        <a class="dropdown-item" href="#">Mentors</a>
+        <div class="container">
+            <a class="navbar-brand" href="#">C2Hire.</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="home-page.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link" data-toggle="dropdown">About Us</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Why C2Hire</a>
+                            <a class="dropdown-item" href="#">Our Team</a>
+                            <a class="dropdown-item" href="#">Advisors</a>
+                            <a class="dropdown-item" href="#">Mentors</a>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <div class="dropdown">
-                    <a class="nav-link" data-toggle="dropdown">Stakeholders</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Corporate</a>
-                        <a class="dropdown-item" href="#">University</a>
-                        <a class="dropdown-item" href="#">Student</a>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link" data-toggle="dropdown">Stakeholders</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Corporate</a>
+                            <a class="dropdown-item" href="#">University</a>
+                            <a class="dropdown-item" href="#">Student</a>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Partners</a>
-            </li>
-            <li class="nav-item">
-                <div class="dropdown">
-                    <a class="nav-link" data-toggle="dropdown">Support</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Contact Us</a>
-                        <a class="dropdown-item" href="#">News</a>
-                        <a class="dropdown-item" href="#">Press</a>
-                        <a class="dropdown-item" href="#">FAQ'S</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Partners</a>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <a class="nav-link" data-toggle="dropdown">Support</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="#">Contact Us</a>
+                            <a class="dropdown-item" href="#">News</a>
+                            <a class="dropdown-item" href="#">Press</a>
+                            <a class="dropdown-item" href="#">FAQ'S</a>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="ml-3">
-                <button class="form-btns btn">Login</button>
-            </li>
-            <li>
-                <button class="form-btns btn">Sign Up</button>
-            </li>
-        </ul>
-
+                </li>
+                <li class="form-buttons ml-3">
+                    <button class="form-btns btn">Login</button>
+                </li>
+                <li class="form-buttons">
+                    <button class="form-btns btn">Sign Up</button>
+                </li>
+            </ul>
+        </div>
     </nav>
     <section class="page-body">
 
