--- a/c2hire/home-page.html
+++ b/c2hire/home-page.html
@@ -63,7 +63,7 @@
                                 <a class="dropdown-item" href="#">Contact Us</a>
                                 <a class="dropdown-item" href="#">News</a>
                                 <a class="dropdown-item" href="#">Press</a>
-                                <a class="dropdown-item" href="#">FAQ'S</a>
+                                <a class="dropdown-item" href="FAQS.html">FAQ'S</a>
                             </div>
                         </div>
                     </li>
@@ -86,28 +86,30 @@
                         <div class="col-lg-12 pl-3 ">
                             <p class="collab">Join. Collaborate. Succeed.</p>
                         </div>
-                        <div class="col-lg-12 p-0">
+                        <div class="col-lg-12 p-0 align-content-center">
                             <div class="list ">
                                 <!-- <h5 class="text-center">"flash text will appears here"</h5> -->
                                 <h5 class="text-center flash" id="text"></h5>
                                 <script>
                                     var a = [
-                                        "Flash text 1",
-                                        "Flash text 2",
-                                        "Flash text 3",
-                                        "Flash text 4",
-                                        "Flash text 5"
+                                        "India's FIRST Blockchain enabled campus hire platform.",
+                                        "A marketplace to collaborateand hire.",
+                                        "Earn credits as you Register and Publish.",
+                                        "Token Payments.",
+                                        "Futuristic Model : On demand subscription.",
+                                        "In-built analytics engine.",
+                                        "Validated and Verified profiles."
                                     ];
 
                                     (function update(idx) {
 
-                                        $("#text").html(`"${a[idx]}"`);
-                                        setTimeout(update, 1500, ((++idx) % a.length));
+                                        $("#text").html(a[idx]);
+                                        setTimeout(update, 2000, ((++idx) % a.length));
 
                                     })(0);
 
                                 </script>
-                                <ul>
+                                <!-- <ul>
                                     <li class="list1">India's FIRST Blockchain enabled campus hire
                                         platform.</li>
                                     <li class="list2">A marketplace to collaborateand hire.
@@ -117,7 +119,7 @@
                                     <li>Futuristic Model : On demand subscription.</li>
                                     <li>Validated and Verified profiles.</li>
                                     <li>In-built analytics engine.</li>
-                                </ul>
+                                </ul> -->
                             </div>
                         </div>
                     </div>
