--- a/c2hire/refund-policy.html
+++ b/c2hire/refund-policy.html
@@ -58,7 +58,7 @@
                                 <a class="dropdown-item" href="#">Contact Us</a>
                                 <a class="dropdown-item" href="#">News</a>
                                 <a class="dropdown-item" href="#">Press</a>
-                                <a class="dropdown-item" href="#">FAQ'S</a>
+                                <a class="dropdown-item" href="FAQS.html">FAQ'S</a>
                             </div>
                         </div>
                     </li>
