changes commited in mentors

--- a/c2hire/home-page.html
+++ b/c2hire/home-page.html
@@ -39,7 +39,7 @@
                                 <a class="dropdown-item" href="#">Why C2Hire</a>
                                 <a class="dropdown-item" href="our-team.html">Our Team</a>
                                 <a class="dropdown-item" href="#">Advisors</a>
-                                <a class="dropdown-item" href="#">Mentors</a>
+                                <a class="dropdown-item" href="mentors.html">Mentors</a>
                             </div>
                         </div>
                     </li>
