--- a/c2hire/our-team.html
+++ b/c2hire/our-team.html
@@ -37,7 +37,7 @@
                                 <a class="dropdown-item" href="#">Why C2Hire</a>
                                 <a class="dropdown-item" href="our-team.html">Our Team</a>
                                 <a class="dropdown-item" href="#">Advisors</a>
-                                <a class="dropdown-item" href="#">Mentors</a>
+                                <a class="dropdown-item" href="mentors.html">Mentors</a>
                             </div>
                         </div>
                     </li>
@@ -74,230 +74,6 @@
     </nav>
     <section class="page-body our-team">
         <div class="container ">
-            <!-- <div class="card team_card">
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12 member">
-                        <span class="circle">
-
-                            <img src="./img/team_members/ramesh-pgk.png" height="220px" alt="">
-                        </span>
-                        <span class="name">Ramesh</span>
-                        <span class="designation">Founder-Director</span>
-                    </div>
-                    <div class="col-lg-8 col-sm-12">
-                        <div class="description">
-                            <p>
-                                An outlier with his skin perennially in the game, Ramesh is a proven risk-taker with
-                                a
-                                knack
-                                for building successes out of failures. He entered the industry over 25 years ago as
-                                a
-                                Scientist/Engineer at the Indian Space Research Organization (ISRO) in 1993. Over
-                                the
-                                years,
-                                he has worked with the world’s most leading MNCs as well as global tech and
-                                consulting
-                                firms
-                                like Infosys Limited, General Electric, Ernst & Young LLP, Wipro Systems,
-                                Intelligroup
-                                Inc
-                                and Genpact.
-                            </p>
-                            <p class="m-0">
-                                The last 15 years have seen Ramesh don the hats of several crucial leadership roles:
-                                as
-                                a
-                                Program Manager for large global transformation programs, Customer Account </p>
-                            <div id="demo0" class="collapse">
-                                <p>
-                                    Manager
-                                    with
-                                    P&L
-                                    responsibility, Practice Head for handling large practices that involve Oracle
-                                    and
-                                    SAP
-                                    technologies, Competency Leader in incubating niche technologies, Quality Leader
-                                    in
-                                    driving
-                                    6-Sigma and CMMI Initiatives, and as an AMS Head in setting customer GDC up.
-                                </p>
-                                <p>
-                                    With a penchant for architecting low-risk, high-return solutions, Ramesh is
-                                    known
-                                    for
-                                    his
-                                    innovative and decisive approach and has significant expertise in handling
-                                    transformational
-                                    programs and incubating Centres of Excellence. Known for his entrepreneurial
-                                    mindset
-                                    and
-                                    cross-functional capabilities, it comes as no surprise that Ramesh decided to
-                                    shift
-                                    from
-                                    the
-                                    conventional IT journey and become the Founder-CEO at PGK Technologies Private
-                                    Limited.
-                                    With
-                                    a passion for staying abreast of the latest developments in tech and
-                                    understanding
-                                    their
-                                    applications — especially in blockchain, AI, and IoT — Ramesh garnered deep
-                                    insights
-                                    about
-                                    how organizations can benefit from blockchain’s scalability, security,
-                                    immutability,
-                                    and
-                                    P2P
-                                    features, making it a natural choice for PGK Technologies.
-                                </p>
-                            </div>
-                            <p class="read-more" data-toggle="collapse" data-target="#demo0">Read more</p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card team_card">
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12 member">
-                        <div class="circle">
-
-                            <img src="./img/team_members/rajnikanth-pgk.png" height="220px" alt="">
-                        </div>
-                        <span class="name">Rajanikanth</span>
-                        <span class="designation">Co-Founder-Director</span>
-                    </div>
-                    <div class="col-lg-8 col-sm-12">
-                        <div class="description">
-                            <p>
-                                A doer and a seeker, Rajanikanth brings professional work experience in the IT industry
-                                that spans across 25 eventful years. With unparalleled expertise in managing large IT
-                                engagements that have global delivery models, he has demonstrated his considerable range
-                                of skills in a series of challenging roles: Research and Innovation Head, Solution/COE
-                                Leader, Pre-sales Leader, Practice Leader, Program/Delivery/Account Manager, and Project
-                                Manager.
-                            </p>
-                            <p class="m-0">
-                                Known for his close involvement in everything he does, Rajanikanth has been instrumental
-                                in architecting multiple success stories for organizations across </p>
-                            <div id="demo" class="collapse">
-                                <p>
-
-                                    verticals — be it
-                                    through driving large transformation programs or in enabling niche technology for
-                                    industry solutions.
-                                </p>
-
-                                <p>
-                                    He has expertise in managing large IT engagements with global delivery models and
-                                    has
-                                    worked with global organizations — including Fortune 500 companies. These days, he
-                                    finds
-                                    his peace in providing Thought Leadership and working in an environment that focuses
-                                    on
-                                    pioneering solutions, which explains his keen interest in empowering organizations
-                                    with
-                                    blockchain, IoT, and AI.
-                                </p>
-                            </div>
-                            <p class="read-more" data-toggle="collapse" data-target="#demo">Read more</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card team_card">
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12 member">
-                        <i class="fas fa-user-circle"></i>
-                        <span class="name">Sumit</span>
-                        <span class="designation">Chief Strategy Officer - Product & Marketing</span>
-                    </div>
-                    <div class="col-lg-8 col-sm-12">
-                        <div class="description">
-                            <p>
-                                Sumit Puntambekar is the Chief Strategy Officer - Product and Marketing at PGK
-                                Technologies. He has over 16 years of professional experience in the field of IT working
-                                in various roles as Strategic and Business Consultant, Operational Excellence,
-                                Compliance Assurance, Project and Portfolio Management. He has worked with the likes of
-                                TCS, Broadridge and Wipro across the globe in the domains of Telecom, Pharma, Finance
-                                and Compliance. He has a bachelor's degree in Computer Sciences and Engineering from
-                                Osmania University along with being NSE Certified in Financial Markets and Advanced
-                                Certification Program in Blockchain Technology & Solutions from IIIT Hyderabad.
-                            </p>
-                            <div id="demo2" class="collapse">
-                                <p>
-                                    Prior to joining PGK Technologies, Sumit has founded ZeroBlocks (a blockchain based
-                                    IT
-                                    Consulting and Product company) and LearnVed (Connecting the roots of Indian
-                                    Learning).
-                                    He is currently on Board and Director at MySoul Retail Pvt. Ltd. He is an avid
-                                    Speaker
-                                    at technical conferences, Start Up Advisor, and a serial investor in the Start Up
-                                    Ecosystem.
-                                </p>
-                            </div>
-                            <p class="read-more" data-toggle="collapse" data-target="#demo2">Read more</p>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card team_card">
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12 member">
-                        <i class="fas fa-user-circle"></i>
-                        <span class="name">Shalmali</span>
-                        <span class="designation">Solution Architect, Product Development</span>
-                    </div>
-                    <div class="col-lg-8 col-sm-12">
-                        <div class="description">
-                            <p>
-                                Shalmali Ayachit is a seasoned professional with over 13 years of experience in the
-                                field of Computers which includes Blockchain Solutions, Start Up Advisor, Educationist,
-                                Solutions, Research & Development and Delivery. She also works as a consultant with IIIT
-                                Hyderabad for their Blockchain program.
-                            </p>
-                            <p>
-                                She has worked as Start Up Advisor at AsliMedicine(Blockchain and Supply Chain), Zoreum,
-                                and at ZeroBlocks(Blockchain and Real Estate). She was part of policy building group for
-                                Blockchain district, Telangana Government.
-                            </p>
-                            <p>
-                                Shalmali works as a Solution Architect for our product C2Hire, India's First Blockchain
-                                enabled Campus hire platform.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card team_card">
-                <div class="row">
-                    <div class="col-lg-4 col-sm-12 member">
-                        <i class="fas fa-user-circle"></i>
-                        <span class="name">Sricharan</span>
-                        <span class="designation">Intern, Product Developmemt</span>
-                    </div>
-                    <div class="col-lg-8 col-sm-12">
-                        <div class="description">
-                            <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis distinctio magni
-                                debitis temporibus iusto, illo pariatur, nobis perferendis totam quibusdam quia. Sint,
-                                quisquam! Repudiandae nesciunt explicabo soluta inventore obcaecati in.
-                            </p>
-                            <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis distinctio magni
-                                debitis temporibus iusto, illo pariatur, nobis perferendis totam quibusdam quia. Sint,
-                                quisquam! Repudiandae nesciunt explicabo soluta inventore obcaecati in.
-                            </p>
-                            <p>
-
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
             <div class="row">
                 <div class="col-lg-5 col-sm-12">
                     <div class="team-text">
