--- a/c2hire/mentors.html
+++ b/c2hire/mentors.html
@@ -115,7 +115,7 @@
                             <li class="item-a member-list">
                                 <div class="member-card" data-toggle="modal" data-target="#secondMentor">
                                     <div class="img-box">
-                                        <img width="220px" height="380px" src="./img/team_members/mentor2.png">
+                                        <img width="220px" height="380px" src="./img/team_members/mentor2.PNG">
                                     </div>
                                     <div class="fadeinUp">
                                         <div class="title">
