--- a/c2hire_new/contactUs.html
+++ b/c2hire_new/contactUs.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" data-toggle="dropdown">About Us</a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="#">Why C2Hire</a>
-                                <a class="dropdown-item" href="Team-credential.html">Our Team</a>
+                                <a class="dropdown-item" href="our-team.html">Our Team</a>
                                 <a class="dropdown-item" href="#">Advisors</a>
                                 <a class="dropdown-item" href="#">Mentors</a>
                             </div>
@@ -78,62 +78,88 @@
     </nav>
     <!-------- header nav ends------- -->
 
-    <section class="page-body policy-terms">
+    <section class="page-body policy-terms contact-Us">
         <img class="landing-bg-img2" src="./assets/img/Group 591.svg" alt="" height="240px" width="230px">
 
         <div class="container">
             <img class="landing-bg-img1" src="./assets/img/ellipseSquare.svg" height="180px" width="180px" alt="">
             <div class="policy-heading ">
-                <h1>Privacy Policy
+                <h1>Contact Us
                 </h1>
             </div>
-            <div class="container policy-terms">
-                <div class="container policy-paragraphs padspacing">
+            <div class="row info-container">
+                <div class="col-6 left-highlight">
+                    <div>
+                        <h5 class="text">Let's connect</h5>
+                        <p class="display">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                            doloremque
+                            laudantium,
+                            totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
+                            vitae
+                            dicta…</p>
+                        <div class="contact-info">
+                            <div class="circle">
+                                <img src="./assets/icon/email.svg" alt="">
+                            </div>
+                            <p>contact@c2hire.com</p>
+                        </div>
+                        <div class="contact-info">
+                            <div class="circle">
+                                <img src="./assets/icon/location.svg" alt="">
+                            </div>
+                            <p>Plot no 32, Jayabheri Enclave Phase-2, Gachibowli, Hyderabad - 500032.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="sendMessageForm">
+                        <form class="send-form">
+                            <h3 class="heading">Send us a message</h3>
+                            <div class="row form-group">
+                                <div class="col-12 input-field">
+                                    <label for="">Full Name</label>
+                                    <input type="text">
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-6 input-field">
+                                    <label for="">Phone number *</label>
+                                    <input type="text">
+                                </div>
+                                <div class="col-6 input-field">
+                                    <label for="">Email address *</label>
+                                    <input type="text">
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-12 input-field">
+                                    <label for=""></label>
+                                    <input type="text">
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-12 input-field">
+                                    <label for="">Company name (optional)</label>
+                                    <input type="text" />
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-12 input-field">
+                                    <label for="">Message *</label>
+                                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                                </div>
+                            </div>
+                            <p> Fields required</p>
+                            <div>
+                                <button class="btn">Contact us now!</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="get-direction">
 
-                    <p>
-                        Thank you for being a part of us . We want to make sure that our stakeholders have an
-                        exceptional
-                        experience. As with any online purchase experience, the below are the terms and conditions that
-                        govern
-                        the
-                        Refund Policy. When you registered for a service on the <a
-                            href="https://c2hire.com">https://c2hire.com</a>,
-                        you agree to Terms and
-                        Conditions covered below.
-                    </p>
-                    <p>
-                        <label class="d-block">Cancellation & Refunds</label>
-
-                        Due to the complex nature of collaboration between stakeholders, we cannot refund the payment.
-                        However,
-                        in
-                        remote circumstances which could be beyond the scope, we request you to send out an email to
-                        <a href="mailto:contact@c2hire.com">contact@c2hire.com</a> with the relevant information and we
-                        will
-                        try
-                        our
-                        best to accommodate the cancellation
-                        and refund request.
-
-                    </p>
-                    <p>
-
-
-                        <label class="d-block">Refunds: Duplicate payment</label>
-
-                        Refund of the duplicate payment made by the stakeholder will be processed by cheque/online
-                        payment
-                        within 30
-                        days after intimation by the stakeholders.
-                    </p>
-                    <p>
-                        <label>Note:</label> All refunds will be processed within 30 days of receipt of the refund
-                        request
-                        and
-                        the
-                        transaction/payment gateway charges will be deducted as per actuals.
-                    </p>
-
+                    </div>
                 </div>
             </div>
         </div>
