--- a/c2hire_new/contactUs.html
+++ b/c2hire_new/contactUs.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-12">
                     <div class="get-direction">
-
+                        <div id="googleMap" style="width:100%;height:400px;"></div>
                     </div>
                 </div>
             </div>
