--- a/c2hire_new/refund-policy.html
+++ b/c2hire_new/refund-policy.html
@@ -84,7 +84,7 @@
         <div class="container">
             <img class="landing-bg-img1" src="./assets/img/ellipseSquare.svg" height="180px" width="180px" alt="">
             <div class="policy-heading ">
-                <h1>Privacy Policy
+                <h1>Refund Policy
                 </h1>
             </div>
             <div class="container policy-terms">
