--- a/c2hire_new/home-page.html
+++ b/c2hire_new/home-page.html
@@ -66,7 +66,7 @@
                                 <a class="dropdown-item" href="contactUs.html">Contact Us</a>
                                 <a class="dropdown-item" href="#">News</a>
                                 <a class="dropdown-item" href="#">Press</a>
-                                <a class="dropdown-item" href="FAQS.html">FAQ'S</a>
+                                <a class="dropdown-item" href="FAQs.html">FAQ'S</a>
                             </div>
                         </div>
                     </li>
